Bug 612551 - Clear appshell observers on xpcom-shutdown. r=blassey a=blocking-fennec